# binance-arbitrage

./: .env_example.txt  .gitignore  Cargo.toml  Dockerfile  README.md  key.sh
src/: bot_monitor.rs  brain_bot.rs  config.rs  data.rs  error_status.rs  graph.rs  logger.rs  macros.rs  main.rs  math_graph.rs  mod.rs  profit_monitor.rs  telegram.rs  tokenfilter.rs  tokens.rs  websocket.rs
tests/: integration_test.rs  shutdown_test.rs  telegram_test.rs  timeout_test.rs
